# gstreamer_integrate_simd_gaussian

./: README.md  meson.build
gst-plugin/src/: .gstmyfilter.c.swp  gstmyfilter.c  gstmyfilter.h
pipeline_script/: play_my_filter_ts.sh  play_wo_filter.sh
